--- a/allrank/approxndc_Multimodal_Feature18_label2_on_ground_truth.json
+++ b/allrank/approxndc_Multimodal_Feature18_label2_on_ground_truth.json
@@ -20,7 +20,8 @@
   },
   "data": {
     "path": "mmdataset/Feature_18_label2",
-    "validation_ds_role": "test",
+    "validation_ds_role": "val",
+    "get_test_statistics": true,
     "num_workers": 1,
     "batch_size": 64,
     "slate_length": 240
