--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,27 @@
             "justMyCode": true
         },
         {
+            "name": "allrank_train_mm_with_cohere_results",
+            "type": "python",
+            "request": "launch",
+            "program": "allrank/main.py",
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "args": [
+                "--config-file-name",
+                "allrank/neuralndcg_atmax_Multimodal_Feature18_label2_on_cohere_ground_truth.json",
+                "--run-id",
+                "neuralndcg_atmax_Multimodal_Feature18_label2_on_cohere_ground_truth",
+                "--job-dir",
+                "experiments/neuralndcg_atmax_Multimodal_Feature18_label2_on_cohere_ground_truth",
+            ],
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}${pathSeparator}${env:PYTHONPATH}",
+                "CUDA_VISIBLE_DEVICES": "0"
+            },
+            "justMyCode": true
+        },
+        {
             "name": "allrank_train_mm",
             "type": "python",
             "request": "launch",
