--- a/allrank/settings/approxndc/approxndc_Multimodal_Feature18_label2_on_metagui_ground_truth_no_trans.json
+++ b/allrank/settings/approxndc/approxndc_Multimodal_Feature18_label2_on_metagui_ground_truth_no_trans.json
@@ -7,19 +7,14 @@
       "dropout": 0.0
     },
     "transformer": {
-      "N": 2,
-      "d_ff": 384,
-      "h": 1,
-      "positional_encoding" : null,
-      "dropout": 0.1
     },
     "post_model": {
-      "output_activation": "Tanh",
+      "output_activation": "Sigmoid",
       "d_output": 1
     }
   },
   "data": {
-    "path": "mmdataset/Feature_18_label2",
+    "path": "mmdataset/Feature_18_metagui_label2",
     "validation_ds_role": "val",
     "get_test_statistics": true,
     "num_workers": 1,
@@ -40,8 +35,8 @@
     }
   },
   "training": {
-    "epochs": 100,
-    "early_stopping_patience": 100,
+    "epochs": 20,
+    "early_stopping_patience": 20,
     "gradient_clipping_norm": null
   },
   "val_metric": "ndcg_5",
@@ -57,18 +52,16 @@
     "ap_10"
   ],
   "loss": {
-    "name": "neuralNDCG",
-    "args": {
-      "temperature": 1.0,
-      "k": null,
-      "powered_relevancies": true,
-      "stochastic": false
+    "name": "approxNDCGLoss",
+    "args":
+    {
+      "alpha": 1.0
     }
   },
   "detect_anomaly": false,
   "expected_metrics" : {
     "val": {
-      "ndcg_5": 0.5
+      "ndcg_5": 0.49
     }
   }
 }
